# llm-rag

./: .gitignore  CLAUDE.md  README.md  claude-red.md  plan-red.md  pyproject.toml
data/: chunk_manifest.md  generation_set.yaml  out_of_corpus.yaml  retrieval_set.yaml
docs/: walkthrough.md
llm_rag/: dataset.py
llm_rag/generators/: __init__.py  generate.py
llm_rag/observability/: __init__.py  drift.py  tracing.py
llm_rag/providers/: __init__.py  base.py  ollama.py
llm_rag/retrievers/: bm25.py  hybrid.py  reranker.py  vector.py
llm_rag/scorers/: __init__.py  base.py  judge.py  rouge.py  semantic.py
llm_rag/scripts/: build_index.py  dump_manifest.py  fetch_corpus.py  run_baseline.py  run_day1_baseline.py  run_drift_check.py  run_ragas_comparison.py
reports/: baseline_2026-05-27.json  baseline_2026-05-27_trace.json  baseline_day1.json  baseline_day1_trace.json  drift_report.json  ragas_comparison.json  report.html  retrieval_baseline.json
tests/: test_smoke_chroma.py  test_smoke_mocked.py  test_smoke_ollama.py
tests/citation/: test_citation.py
tests/generation/: conftest.py  test_generation_quality.py  test_generator.py  test_scorers.py
tests/hallucination/: conftest.py  test_hallucination.py
tests/observability/: test_drift.py  test_tracing.py
tests/refusal/: conftest.py  test_refusal.py
tests/retrieval/: conftest.py  test_bm25.py  test_hybrid.py  test_reranker.py  test_vector.py
